--- a/config/west.yml
+++ b/config/west.yml
@@ -4,10 +4,12 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: infused-kim
       url-base: https://github.com/infused-kim
+    - name: dktpham
+      url-base: https://github.com/dktpham
   projects:
-    - name: zmk
-      remote: infused-kim
-      revision: my-changes/split-encoder
+    - name: infused-kim-zmk
+      remote: dktpham
+      revision: sofle
       import: app/west.yml
   self:
     path: config
